fixed spacing

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -28,9 +28,9 @@ body {
       justify-content: center;
 
       @media screen and (min-width: 376px) {
-        margin-right: 220px;
+        margin-right: 210px;
         justify-content: center;
-        margin-left: 220px;
+        margin-left: 210px;
       }
 
       .info {
